[gd_scene load_steps=70 format=3 uid="uid://l7opxxy1xbfw"]

[ext_resource type="Script" uid="uid://bxgw84khcirto" path="res://Scripts/Triggers/Audio/SoundEffectManager.gd" id="1_mtv6a"]
[ext_resource type="AudioStream" uid="uid://cha8mgtpkqebl" path="res://Sfxs/HitPunch.ogg" id="2_xx8a3"]
[ext_resource type="AudioStream" uid="uid://qh8k1sfn4nph" path="res://Sfxs/Slashbite.ogg" id="3_kf7vc"]
[ext_resource type="AudioStream" uid="uid://caaf217cfsogm" path="res://Sfxs/FireworkBites.ogg" id="3_tnji0"]
[ext_resource type="AudioStream" uid="uid://b30ecbu3xs7p7" path="res://Sfxs/SlashBite3th.ogg" id="4_4kipm"]
[ext_resource type="AudioStream" uid="uid://btan7tpjqy2p5" path="res://Sfxs/Meow.ogg" id="4_kf7vc"]
[ext_resource type="AudioStream" uid="uid://bk7dlx8ur61ml" path="res://Sfxs/Jump.ogg" id="5_4kipm"]
[ext_resource type="AudioStream" uid="uid://3jogi2rbxq87" path="res://Sfxs/Kickback.ogg" id="6_60v18"]
[ext_resource type="AudioStream" uid="uid://cnu20afwws4y8" path="res://Sfxs/Dash.ogg" id="6_vg6ym"]
[ext_resource type="AudioStream" uid="uid://chtcc7e3sjiye" path="res://Sfxs/Wallkick.ogg" id="7_60v18"]
[ext_resource type="AudioStream" uid="uid://bpmfa2yge538e" path="res://Sfxs/DoorEnter.ogg" id="8_1687l"]
[ext_resource type="AudioStream" uid="uid://d2fwdodgcrhqs" path="res://Sfxs/Intro_Thunder.ogg" id="8_xx8a3"]
[ext_resource type="AudioStream" uid="uid://bqytrcdle6xv6" path="res://Sfxs/FallStep.ogg" id="9_1687l"]
[ext_resource type="AudioStream" uid="uid://bvsxs26fuj5eb" path="res://Sfxs/DoorExit.ogg" id="9_wqpwf"]
[ext_resource type="AudioStream" uid="uid://ptqdythufwt7" path="res://Sfxs/WaterSplashEnter.ogg" id="10_fkifm"]
[ext_resource type="AudioStream" uid="uid://wr187irl43wt" path="res://Sfxs/Whoosh.ogg" id="11_60v18"]
[ext_resource type="AudioStream" uid="uid://dd2o0qqheho11" path="res://Sfxs/WaterSplashExit.ogg" id="11_nev24"]
[ext_resource type="AudioStream" uid="uid://pt13532nqenb" path="res://Sfxs/WetFurShake.ogg" id="12_2n0ht"]
[ext_resource type="AudioStream" uid="uid://q2ef50oolwe2" path="res://Sfxs/Knockback.ogg" id="13_1687l"]
[ext_resource type="AudioStream" uid="uid://bbfe0kr7saaeq" path="res://Sfxs/Thunder_Out.ogg" id="13_cj85q"]
[ext_resource type="AudioStream" uid="uid://cwe3h4k01o135" path="res://Sfxs/Splash.ogg" id="14_x8r6i"]
[ext_resource type="AudioStream" uid="uid://dsffdfpbb482o" path="res://Sfxs/SwingSlap.ogg" id="15_6q5ds"]
[ext_resource type="AudioStream" uid="uid://bfocqqo02dfb" path="res://Sfxs/LightingKite.ogg" id="16_lm12s"]
[ext_resource type="AudioStream" uid="uid://bnhh3o6if16dv" path="res://Sfxs/Meow_Hurt.ogg" id="18_aw0ft"]
[ext_resource type="AudioStream" uid="uid://6ab4vljngm4c" path="res://Sfxs/Purring.ogg" id="19_v0bab"]
[ext_resource type="AudioStream" uid="uid://0ypp1gu1epuc" path="res://Sfxs/CrazyFlySaw.ogg" id="20_llyrc"]
[ext_resource type="AudioStream" uid="uid://b02u8hg8smji" path="res://Sfxs/Fan.ogg" id="21_mffmx"]
[ext_resource type="AudioStream" uid="uid://dljpfwyuyjbr2" path="res://Sfxs/BOUNCE Twang Spring 01.ogg" id="25_nev24"]
[ext_resource type="AudioStream" uid="uid://bionlvjmqfi5c" path="res://Sfxs/BOUNCE Twang Spring 02.ogg" id="26_2n0ht"]
[ext_resource type="AudioStream" uid="uid://8s78xhuvxfov" path="res://Sfxs/SWIPE Whoosh 06.ogg" id="30_cj85q"]
[ext_resource type="AudioStream" uid="uid://bpwx7k57jribt" path="res://Sfxs/Eletricity_Charge.ogg" id="30_x8r6i"]
[ext_resource type="AudioStream" uid="uid://bo4ep10c7itky" path="res://Sfxs/SWIPE Whoosh 05.ogg" id="31_2n0ht"]
[ext_resource type="AudioStream" uid="uid://c3vypxld53rg" path="res://Sfxs/SWIPE Whoosh Impact Chop Thud 01.ogg" id="31_x8r6i"]
[ext_resource type="AudioStream" uid="uid://e6y6rt6kir8v" path="res://Sfxs/EletricGlitch.ogg" id="34_x8r6i"]
[ext_resource type="AudioStream" uid="uid://fw4kccsnogba" path="res://Sfxs/MenuAppear.ogg" id="35_afgvn"]
[ext_resource type="AudioStream" uid="uid://csmooaca1hcu3" path="res://Sfxs/ConfirmMenu.ogg" id="36_vqgfw"]
[ext_resource type="AudioStream" uid="uid://drbnkb5m4v2fk" path="res://Sfxs/MenuCancel.ogg" id="37_rdopf"]
[ext_resource type="AudioStream" uid="uid://nq7h6xcn28ko" path="res://Sfxs/Ping_ChangeOption.ogg" id="38_phmnk"]
[ext_resource type="AudioStream" uid="uid://jmmpkvo0tdmh" path="res://Sfxs/Pickup.ogg" id="39_baghl"]
[ext_resource type="AudioStream" uid="uid://dxn2qvq05o2hr" path="res://Sfxs/NightFlyCaught.ogg" id="40_nuosa"]
[ext_resource type="AudioStream" uid="uid://3friga4m1fvj" path="res://Sfxs/PogoPoing.ogg" id="41_auu27"]
[ext_resource type="AudioStream" uid="uid://cebvmndk2oy5v" path="res://Sfxs/PogoPoing_2.ogg" id="42_xiq76"]
[ext_resource type="AudioStream" uid="uid://d2x6rvbtcsub8" path="res://Sfxs/PogoPower.ogg" id="43_uvots"]
[ext_resource type="AudioStream" uid="uid://dcnjld8iti2f4" path="res://Sfxs/Flockos_Yell.wav" id="44_u4kv4"]
[ext_resource type="AudioStream" uid="uid://uv70f4cqwvnj" path="res://Sfxs/MetalSpring.ogg" id="45_rlap0"]
[ext_resource type="AudioStream" uid="uid://cat8a7newklok" path="res://Sfxs/SpringVocaled.ogg" id="46_k6ucl"]
[ext_resource type="AudioStream" uid="uid://dg3v1y61gutck" path="res://Sfxs/Lucidel.ogg" id="47_c2fnm"]
[ext_resource type="AudioStream" uid="uid://duushbgo7xya5" path="res://Sfxs/FlockosSlashCry1st.wav" id="48_7x87h"]
[ext_resource type="AudioStream" uid="uid://ddawe12273m4u" path="res://Sfxs/FlockosSlashCry2nd.wav" id="49_p4iwi"]
[ext_resource type="AudioStream" uid="uid://di70yc41s0sjb" path="res://Sfxs/FlockosSlashCry3rd.wav" id="50_p4iwi"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bx1hu"]
random_pitch = 1.5
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("2_xx8a3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fkifm"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_kf7vc")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ptalp"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_kf7vc")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wqpwf"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_4kipm")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1687l"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("18_aw0ft")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ida7i"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("10_fkifm")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5ombs"]
playback_mode = 1
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("11_nev24")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3rkdp"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("14_x8r6i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4646q"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("15_6q5ds")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4avh0"]
playback_mode = 1
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("25_nev24")
stream_1/stream = ExtResource("26_2n0ht")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cj85q"]
playback_mode = 1
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("30_cj85q")
stream_1/stream = ExtResource("31_2n0ht")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ayunq"]
random_pitch = 1.2
random_volume_offset_db = 0.1
streams_count = 1
stream_0/stream = ExtResource("3_tnji0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_e2eod"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("39_baghl")
stream_0/weight = 2.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nybge"]
playback_mode = 1
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("41_auu27")
stream_1/stream = ExtResource("42_xiq76")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6csay"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("43_uvots")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rqv6e"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("46_k6ucl")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_k54t3"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("48_7x87h")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vdgu6"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("49_p4iwi")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_73wpo"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("50_p4iwi")

[node name="SoundEffects" type="Node"]
script = ExtResource("1_mtv6a")

[node name="SFX_AttackHit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_bx1hu")
pitch_scale = 0.9
bus = &"SFXs"

[node name="SFX_SlashBite" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_fkifm")
volume_db = -12.0
pitch_scale = 0.9
bus = &"SFXs"

[node name="SFX_SlashBite3th" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_4kipm")
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_FireworkBites" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_tnji0")
volume_db = -8.0
max_polyphony = 4
bus = &"SFXs"

[node name="SFX_Kickback" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_60v18")
volume_db = -5.0
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Meow" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ptalp")
pitch_scale = 1.2
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Jump" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_wqpwf")
volume_db = 8.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Land" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_1687l")
volume_db = 5.0
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Dash" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_vg6ym")
volume_db = -15.0
pitch_scale = 1.2
bus = &"SFXs"

[node name="SFX_DashSaw" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_60v18")
pitch_scale = 0.8
mix_target = 2
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_WallKick" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_60v18")
pitch_scale = 0.8
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Knockback" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_1687l")
volume_db = -6.0
bus = &"SFXs"

[node name="SFX_ThunderIntro" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_xx8a3")
volume_db = -10.0
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_OpenDoor" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_1687l")
volume_db = -5.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_CloseDoor" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_wqpwf")
volume_db = -5.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs Espaçoso"

[node name="SFX_MeowHurt" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_1687l")
volume_db = -4.0
pitch_scale = 1.05
max_polyphony = 2
bus = &"SFXs"
playback_type = 1

[node name="SFX_SplashWaterEnter" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ida7i")
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs Espaçoso"

[node name="SFX_SplashWaterExit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_5ombs")
volume_db = -6.0
pitch_scale = 1.2
mix_target = 1
bus = &"SFXs"

[node name="SFX_WaterShake" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_2n0ht")
mix_target = 1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_ThunderEco" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_cj85q")
max_polyphony = 2
bus = &"SFXs Repetidor"

[node name="SFX_Splash" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_3rkdp")
volume_db = -10.0
pitch_scale = 0.9
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_WaterSwing" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_4646q")
volume_db = -1.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_LightingKite" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_lm12s")
pitch_scale = 1.1
mix_target = 2
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Boing" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_4avh0")
volume_db = -5.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_MeowDeath" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("18_aw0ft")
volume_db = -6.0
max_polyphony = 2
bus = &"SFXs Repetidor"

[node name="SFX_Purr" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("19_v0bab")
volume_db = -5.0
pitch_scale = 1.15
mix_target = 2
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_CrazyFly_Saw" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("20_llyrc")
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_Fan" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("21_mffmx")
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_LightingCharge" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("30_x8r6i")
max_polyphony = 3
bus = &"SFXs"

[node name="SFX_WhooshBlade" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_cj85q")
volume_db = -2.0
pitch_scale = 1.1
max_polyphony = 2
bus = &"SFXs"

[node name="SFX_StrongSwordStamp" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("31_x8r6i")
volume_db = 10.0
mix_target = 1
max_polyphony = 2
bus = &"SFXs Repetidor"
playback_type = 1

[node name="SFX_GlitchingScratch" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("34_x8r6i")
max_polyphony = 4
bus = &"SFXs"

[node name="SFX_DestructionExplosion" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ayunq")
volume_db = 1.0
pitch_scale = 1.3
bus = &"SFXs"

[node name="SFX_MenuAppear" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 1
stream = ExtResource("35_afgvn")
volume_db = 5.0
bus = &"SFXs"

[node name="SFX_MenuConfirm" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 1
stream = ExtResource("36_vqgfw")
bus = &"SFXs"

[node name="SFX_MenuQuit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 1
stream = ExtResource("37_rdopf")
bus = &"SFXs"

[node name="SFX_MenuArrow" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 1
stream = ExtResource("38_phmnk")
bus = &"SFXs"

[node name="SFX_Pickup" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_e2eod")
bus = &"SFXs"

[node name="SFX_PickupRare" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("40_nuosa")
pitch_scale = 0.7
bus = &"SFXs Repetidor"

[node name="SFX_Poing" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_nybge")
volume_db = -5.0
bus = &"SFXs"

[node name="SFX_PoingPower" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_6csay")
bus = &"SFXs"

[node name="SFX_FlockosYell" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("44_u4kv4")
bus = &"SFXs"

[node name="SFX_MetalSpring" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("45_rlap0")

[node name="SFX_SpringVocaled" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_rqv6e")
volume_db = -5.0
bus = &"SFXs Repetidor"

[node name="SFX_Luicidel" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("47_c2fnm")
volume_db = -5.0

[node name="SFX_FlockosCry1st" type="AudioStreamPlayer" parent="." groups=["vocal"]]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_k54t3")
pitch_scale = 1.1
bus = &"SFXs"

[node name="SFX_FlockosCry2nd" type="AudioStreamPlayer" parent="." groups=["vocal"]]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_vdgu6")
bus = &"SFXs"

[node name="SFX_FlockosCry3rd" type="AudioStreamPlayer" parent="." groups=["vocal"]]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_73wpo")
volume_db = -5.0
bus = &"SFXs"
